<resources>
    <string name="app_name">Tank Tracker</string>
    <!--activity_main.xml-->
    <string name="new_tank">New Tank</string>
    <!--item_tank.xml-->
    <string name="tank_name">Tank Name</string>
    <string name="tank_size">Tank Size</string>
    <string name="last_maintenance_xx_xx_xx_nnext_maintenance_xx_xx_xx">Last Maintenance XX/XX/XX\nNext Maintenance XX/XX/XX</string>
    <!--activity_add_tank.xml-->
    <string name="enter_the_name_of_your_tank">Enter the name of your tank</string>
    <string name="enter_the_size_of_your_tank">Enter the size of your tank</string>
    <string name="enter_any_additional_notes">Enter any additional notes</string>
    <string name="add_tank">Add Tank</string>
</resources>